Remove horizontal scroll bar in left nav and update stop param in payload

--- a/style.v1.02.css
+++ b/style.v1.02.css
@@ -137,8 +137,10 @@ body {
 }
 
 .left-nav-chat-list {
+    width: 100%;
     height: 60%;
     overflow-y: auto;   
+    overflow-x: hidden;
 }
 .newchat {
     border: solid gray 1px;
@@ -284,10 +286,6 @@ body {
 }
 
 .left-nav-top {
-    width: 100%;
-}
-
-.left-nav-chat-list {
     width: 100%;
 }
 
